modifcation de registion before create mandat interfece

--- a/src/app/shared/components/aside-bare/aside-bare.component.html
+++ b/src/app/shared/components/aside-bare/aside-bare.component.html
@@ -149,10 +149,10 @@
           </a>
         </li>
         <li class="nav-item">
-          <a routerLink="/sessions" routerLinkActive="active">
+          <a routerLink="mandat/mandat-add" routerLinkActive="active">
             <i class="bi bi-calendar-event"></i>
-            <span class="nav-text">Sessions</span>
-            <span class="tooltip">Sessions</span>
+            <span class="nav-text">Mandats</span>
+            <span class="tooltip">Mandats</span>
           </a>
         </li>
         <li class="nav-item">
