--- a/src/app/shared/components/aside-bare/aside-bare.component.html
+++ b/src/app/shared/components/aside-bare/aside-bare.component.html
@@ -76,6 +76,27 @@
     <hr>
 
     <nav class="navigation">
+      <span>Gestion des Mandats</span>
+      <ul class="nav-items">
+        <li class="nav-item">
+          <a routerLink="mandats/list" routerLinkActive="active">
+            <i class="bi bi-card-checklist"></i>
+            <span class="nav-text">Liste des Mandats</span>
+            <span class="tooltip">Liste des Mandats</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="mandats/add" routerLinkActive="active">
+            <i class="bi bi-calendar-plus"></i>
+            <span class="nav-text">Ajouter un Mandat</span>
+            <span class="tooltip">Ajouter un Mandat</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <hr>
+
+    <nav class="navigation">
       <span>Notifications</span>
       <ul class="nav-items">
         <li class="nav-item">
@@ -125,7 +146,7 @@
     <hr>
 
     <nav class="navigation">
-      <span>Gestions Des entités</span>
+      <span>Autres Entités</span>
       <ul class="nav-items">
         <li class="nav-item">
           <a routerLink="/bourses" routerLinkActive="active">
@@ -146,13 +167,6 @@
             <i class="bi bi-collection"></i>
             <span class="nav-text">Clubs</span>
             <span class="tooltip">Clubs</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="mandat/mandat-add" routerLinkActive="active">
-            <i class="bi bi-calendar-event"></i>
-            <span class="nav-text">Mandats</span>
-            <span class="tooltip">Mandats</span>
           </a>
         </li>
         <li class="nav-item">
